--- a/wasm/baloo_pow/Cargo.toml
+++ b/wasm/baloo_pow/Cargo.toml
@@ -5,12 +5,11 @@ edition = "2021"
 
 [dependencies]
 wasm-bindgen = "0.2"
-sha2 = "0.10"
+sha2 = "0.11.0-pre.5"
 hex = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde-wasm-bindgen = "0.5"
-ring = "0.16"
 itoa = "1.0"
 
 [lib]
