--- a/wasm/baloo_pow/Cargo.toml
+++ b/wasm/baloo_pow/Cargo.toml
@@ -14,3 +14,9 @@ itoa = "1.0"
 
 [lib]
 crate-type = ["cdylib"]
+
+[profile.release]
+opt-level = 3
+lto = true
+codegen-units = 1
+panic = 'abort' # if we ever panic, we might aswell abort.
